--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "version": "16.13.1",
+  "description": "A blazing fast custom React renderer that supports the only tag that matters: marquee.",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -10,6 +11,17 @@
   "engines": {
     "node": ">=10"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pirelenito/react-marquee.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pirelenito/react-marquee/issues"
+  },
+  "homepage": "https://github.com/pirelenito/react-marquee",
+  "keywords": [
+    "react"
+  ],
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
